--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -14,8 +14,10 @@ spec:
       labels:
         app: nginx
     spec:
+      imagePullSecrets:
+      - name: mydockerhub
       containers:
       - name: nginx
-        image: nginx:latest
+        image: marvdocking/mywebapp-k8s:latest
         ports:
         - containerPort: 8082
