--- a/nginx-daemonservice.yaml
+++ b/nginx-daemonservice.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: nginx-daemonservice
 spec:
   selector:
     app: nginx
   type: NodePort
   ports:
     - protocol: TCP
-      port: 8082
-      targetPort: 8082
+      port: 80
+      targetPort: 80
